Update release notes

--- a/v1.21.0.md
+++ b/v1.21.0.md
@@ -18,14 +18,14 @@
 # CRI-O v1.21.0
 
 The release notes have been generated for the commit range
-[v1.20.0...64d6ff4](https://github.com/cri-o/cri-o/compare/v1.20.0...64d6ff4d1d36a48547b7c5ef15751a7dba624aac) on Fri, 28 May 2021 14:14:57 UTC.
+[v1.20.0...8fcce26](https://github.com/cri-o/cri-o/compare/v1.20.0...8fcce26e68b3c113a33caed09c2389b4c8b7d3fa) on Sun, 30 May 2021 06:24:17 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.64d6ff4d1d36a48547b7c5ef15751a7dba624aac.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.64d6ff4d1d36a48547b7c5ef15751a7dba624aac.tar.gz)
-- [cri-o.arm64.64d6ff4d1d36a48547b7c5ef15751a7dba624aac.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.64d6ff4d1d36a48547b7c5ef15751a7dba624aac.tar.gz)
+- [cri-o.amd64.8fcce26e68b3c113a33caed09c2389b4c8b7d3fa.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.8fcce26e68b3c113a33caed09c2389b4c8b7d3fa.tar.gz)
+- [cri-o.arm64.8fcce26e68b3c113a33caed09c2389b4c8b7d3fa.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.8fcce26e68b3c113a33caed09c2389b4c8b7d3fa.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -73,6 +73,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 
 #### Design
  - Add support for customizing container specs based on workloads. Each workload has an activation_annotation that, when present, activates the specific workload. Then, each workload has the option to configure different resources. Resources can have default values, or require that they're specified for each individual container. This is done by annotation, which is of the form `$annotation_prefix.$resource_name/$container_name`, where annotation_prefix is configured for the particular workload, resource_name corresponds to the resource being configured, and container name is the container in a pod that should have its resource configured. ([#4725](https://github.com/cri-o/cri-o/pull/4725), [@haircommander](https://github.com/haircommander))
+ - ExecSync requests now don't use conmon, instead calling the runtime directly, which reduces overhead. ([#4943](https://github.com/cri-o/cri-o/pull/4943), [@haircommander](https://github.com/haircommander))
 
 #### Documentation
  - The installed cri-o.service file now attempts to be run before kubelet.service ([#4443](https://github.com/cri-o/cri-o/pull/4443), [@haircommander](https://github.com/haircommander))
