Update release notes

--- a/v1.21.0.md
+++ b/v1.21.0.md
@@ -18,14 +18,14 @@
 # CRI-O v1.21.0
 
 The release notes have been generated for the commit range
-[v1.20.0...473084c](https://github.com/cri-o/cri-o/compare/v1.20.0...473084cc183e7ce70a54ccb97262ce4831f73b74) on Tue, 01 Jun 2021 08:00:11 UTC.
+[v1.20.0...d2782ea](https://github.com/cri-o/cri-o/compare/v1.20.0...d2782eade565fb0b510f19ed334188cf841ee459) on Tue, 01 Jun 2021 14:30:33 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.473084cc183e7ce70a54ccb97262ce4831f73b74.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.473084cc183e7ce70a54ccb97262ce4831f73b74.tar.gz)
-- [cri-o.arm64.473084cc183e7ce70a54ccb97262ce4831f73b74.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.473084cc183e7ce70a54ccb97262ce4831f73b74.tar.gz)
+- [cri-o.amd64.d2782eade565fb0b510f19ed334188cf841ee459.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.d2782eade565fb0b510f19ed334188cf841ee459.tar.gz)
+- [cri-o.arm64.d2782eade565fb0b510f19ed334188cf841ee459.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.d2782eade565fb0b510f19ed334188cf841ee459.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -162,6 +162,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/checkpoint-restore/go-criu/v5: [v5.0.0](https://github.com/checkpoint-restore/go-criu/v5/tree/v5.0.0)
 - github.com/cheggaaa/pb/v3: [v3.0.5](https://github.com/cheggaaa/pb/v3/tree/v3.0.5)
 - github.com/clbanning/x2j: [8252494](https://github.com/clbanning/x2j/tree/8252494)
+- github.com/cncf/udpa/go: [5459f2c](https://github.com/cncf/udpa/go/tree/5459f2c)
 - github.com/containerd/aufs: [v1.0.0](https://github.com/containerd/aufs/tree/v1.0.0)
 - github.com/containerd/btrfs: [v1.0.0](https://github.com/containerd/btrfs/tree/v1.0.0)
 - github.com/containerd/go-cni: [v1.0.2](https://github.com/containerd/go-cni/tree/v1.0.2)
@@ -204,6 +205,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/lightstep/lightstep-tracer-common/golang/gogo: [bc2310a](https://github.com/lightstep/lightstep-tracer-common/golang/gogo/tree/bc2310a)
 - github.com/lightstep/lightstep-tracer-go: [v0.18.1](https://github.com/lightstep/lightstep-tracer-go/tree/v0.18.1)
 - github.com/lunixbochs/vtclean: [2d01aac](https://github.com/lunixbochs/vtclean/tree/2d01aac)
+- github.com/lyft/protoc-gen-validate: [v0.0.13](https://github.com/lyft/protoc-gen-validate/tree/v0.0.13)
 - github.com/magefile/mage: [v1.11.0](https://github.com/magefile/mage/tree/v1.11.0)
 - github.com/manifoldco/promptui: [v0.8.0](https://github.com/manifoldco/promptui/tree/v0.8.0)
 - github.com/markbates/pkger: [v0.17.1](https://github.com/markbates/pkger/tree/v0.17.1)
@@ -300,6 +302,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/cri-o/ocicni: [513ef78 → 541cf7c](https://github.com/cri-o/ocicni/compare/513ef78...541cf7c)
 - github.com/docker/docker: [bd33bbf → 646072e](https://github.com/docker/docker/compare/bd33bbf...646072e)
 - github.com/emicklei/go-restful: [v2.9.5+incompatible → v2.15.0+incompatible](https://github.com/emicklei/go-restful/compare/v2.9.5...v2.15.0)
+- github.com/envoyproxy/go-control-plane: [5f8ba28 → 668b12f](https://github.com/envoyproxy/go-control-plane/compare/5f8ba28...668b12f)
 - github.com/fsouza/go-dockerclient: [v1.6.5 → v1.7.2](https://github.com/fsouza/go-dockerclient/compare/v1.6.5...v1.7.2)
 - github.com/go-kit/kit: [v0.9.0 → v0.10.0](https://github.com/go-kit/kit/compare/v0.9.0...v0.10.0)
 - github.com/go-logfmt/logfmt: [v0.4.0 → v0.5.0](https://github.com/go-logfmt/logfmt/compare/v0.4.0...v0.5.0)
@@ -312,6 +315,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/gofrs/flock: [v0.7.1 → v0.8.0](https://github.com/gofrs/flock/compare/v0.7.1...v0.8.0)
 - github.com/gogo/protobuf: [v1.3.1 → v1.3.2](https://github.com/gogo/protobuf/compare/v1.3.1...v1.3.2)
 - github.com/golang/mock: [v1.4.4 → v1.5.0](https://github.com/golang/mock/compare/v1.4.4...v1.5.0)
+- github.com/golang/protobuf: [v1.3.5 → v1.5.2](https://github.com/golang/protobuf/compare/v1.3.5...v1.5.2)
 - github.com/google/cadvisor: [v0.38.5 → v0.39.0](https://github.com/google/cadvisor/compare/v0.38.5...v0.39.0)
 - github.com/google/go-cmp: [v0.5.2 → v0.5.5](https://github.com/google/go-cmp/compare/v0.5.2...v0.5.5)
 - github.com/google/go-containerregistry: [v0.1.3 → v0.3.0](https://github.com/google/go-containerregistry/compare/v0.1.3...v0.3.0)
@@ -393,6 +397,8 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - golang.org/x/tools: 079ba7b → v0.1.0
 - google.golang.org/api: v0.35.0 → v0.36.0
 - google.golang.org/appengine: v1.6.6 → v1.6.7
+- google.golang.org/grpc: v1.27.0 → v1.38.0
+- google.golang.org/protobuf: v1.25.0 → v1.26.0
 - gopkg.in/gcfg.v1: v1.2.0 → v1.2.3
 - gopkg.in/square/go-jose.v2: v2.3.1 → v2.5.1
 - gopkg.in/yaml.v2: v2.3.0 → v2.4.0
