Update release notes

--- a/v1.21.0.md
+++ b/v1.21.0.md
@@ -18,14 +18,14 @@
 # CRI-O v1.21.0
 
 The release notes have been generated for the commit range
-[v1.20.0...a54bebf](https://github.com/cri-o/cri-o/compare/v1.20.0...a54bebf840ffa4b4f075a10ddc563cb04275d299) on Tue, 01 Jun 2021 18:57:42 UTC.
+[v1.20.0...8e31b51](https://github.com/cri-o/cri-o/compare/v1.20.0...8e31b515887170d4192568682ec2b70ed9c10fd2) on Thu, 03 Jun 2021 02:21:32 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.a54bebf840ffa4b4f075a10ddc563cb04275d299.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.a54bebf840ffa4b4f075a10ddc563cb04275d299.tar.gz)
-- [cri-o.arm64.a54bebf840ffa4b4f075a10ddc563cb04275d299.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.a54bebf840ffa4b4f075a10ddc563cb04275d299.tar.gz)
+- [cri-o.amd64.8e31b515887170d4192568682ec2b70ed9c10fd2.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.8e31b515887170d4192568682ec2b70ed9c10fd2.tar.gz)
+- [cri-o.arm64.8e31b515887170d4192568682ec2b70ed9c10fd2.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.8e31b515887170d4192568682ec2b70ed9c10fd2.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -58,6 +58,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Added feature to allow the OCI seccomp BPF hook to trace containers into dedicated files by
   using the annotation key `io.containers.trace-syscall/container-name` ([#4544](https://github.com/cri-o/cri-o/pull/4544), [@saschagrunert](https://github.com/saschagrunert))
  - Added secure metrics endpoint configuration options ([#4805](https://github.com/cri-o/cri-o/pull/4805), [@saschagrunert](https://github.com/saschagrunert))
+ - Automatically reload metrics TLS certificate and key if any of those specified files change. ([#4927](https://github.com/cri-o/cri-o/pull/4927), [@saschagrunert](https://github.com/saschagrunert))
  - Bump containers image to v5.10.1 ([#4519](https://github.com/cri-o/cri-o/pull/4519), [@QiWang19](https://github.com/QiWang19))
  - CRI-O does not return `<none>` placeholders for missing tags and digests any more when doing a `ListImages` RPC ([#4673](https://github.com/cri-o/cri-o/pull/4673), [@saschagrunert](https://github.com/saschagrunert))
  - Changed `VersionResponse.RuntimeApiVersion` to return either the `v1alpha2` or `v1` CRI API version ([#4473](https://github.com/cri-o/cri-o/pull/4473), [@saschagrunert](https://github.com/saschagrunert))
