--- a/v1.21.1.md
+++ b/v1.21.1.md
@@ -3,6 +3,7 @@
   - [Changelog since v1.21.0](#changelog-since-v1210)
     - [Changes by Kind](#changes-by-kind)
       - [Dependency-Change](#dependency-change)
+      - [Failing Test](#failing-test)
       - [Uncategorized](#uncategorized)
   - [Dependencies](#dependencies)
     - [Added](#added)
@@ -12,14 +13,14 @@
 # CRI-O v1.21.1
 
 The release notes have been generated for the commit range
-[v1.21.0...f635341](https://github.com/cri-o/cri-o/compare/v1.21.0...f6353417d762bb388d529d054414ad75cc3fff0f) on Thu, 03 Jun 2021 03:05:29 UTC.
+[v1.21.0...e1bc46b](https://github.com/cri-o/cri-o/compare/v1.21.0...e1bc46bc1ae91c471089dc9c9deb2d465d441f41) on Sun, 06 Jun 2021 04:29:00 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.f6353417d762bb388d529d054414ad75cc3fff0f.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.f6353417d762bb388d529d054414ad75cc3fff0f.tar.gz)
-- [cri-o.arm64.f6353417d762bb388d529d054414ad75cc3fff0f.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.f6353417d762bb388d529d054414ad75cc3fff0f.tar.gz)
+- [cri-o.amd64.e1bc46bc1ae91c471089dc9c9deb2d465d441f41.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.e1bc46bc1ae91c471089dc9c9deb2d465d441f41.tar.gz)
+- [cri-o.arm64.e1bc46bc1ae91c471089dc9c9deb2d465d441f41.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.e1bc46bc1ae91c471089dc9c9deb2d465d441f41.tar.gz)
 
 ## Changelog since v1.21.0
 
@@ -27,6 +28,9 @@ Download one of our static release bundles via our Google Cloud Bucket:
 
 #### Dependency-Change
  - Fix possible segfault when image is deleted by podman while CRI-O is listing images ([#4932](https://github.com/cri-o/cri-o/pull/4932), [@haircommander](https://github.com/haircommander))
+
+#### Failing Test
+ - Updated static binary bundle crun version to v0.20 ([#4961](https://github.com/cri-o/cri-o/pull/4961), [@saschagrunert](https://github.com/saschagrunert))
 
 #### Uncategorized
  - Add support for `absent_mount_sources_to_reject`, which allows admins to configure paths that, when mounted into a container despite not existing on the host, causes a container creation request to fail. This is useful for paths like `/etc/hostname`, which causes trouble as a directory, but possibly shouldn't be created as a file either (in the case of a dynamic hostname). ([#4857](https://github.com/cri-o/cri-o/pull/4857), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
