Update release notes

--- a/v1.21.0.md
+++ b/v1.21.0.md
@@ -18,14 +18,14 @@
 # CRI-O v1.21.0
 
 The release notes have been generated for the commit range
-[v1.20.0...5ca9f79](https://github.com/cri-o/cri-o/compare/v1.20.0...5ca9f79588e3b75a018317f33b229316ddf1e021) on Fri, 04 Jun 2021 16:59:30 UTC.
+[v1.20.0...1559a9a](https://github.com/cri-o/cri-o/compare/v1.20.0...1559a9af5e08f7c0a184ca5a3e0656848cfb6482) on Mon, 07 Jun 2021 07:03:41 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.5ca9f79588e3b75a018317f33b229316ddf1e021.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.5ca9f79588e3b75a018317f33b229316ddf1e021.tar.gz)
-- [cri-o.arm64.5ca9f79588e3b75a018317f33b229316ddf1e021.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.5ca9f79588e3b75a018317f33b229316ddf1e021.tar.gz)
+- [cri-o.amd64.1559a9af5e08f7c0a184ca5a3e0656848cfb6482.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.1559a9af5e08f7c0a184ca5a3e0656848cfb6482.tar.gz)
+- [cri-o.arm64.1559a9af5e08f7c0a184ca5a3e0656848cfb6482.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.1559a9af5e08f7c0a184ca5a3e0656848cfb6482.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -196,6 +196,8 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/google/go-intervals: [v0.0.2](https://github.com/google/go-intervals/tree/v0.0.2)
 - github.com/google/licenseclassifier/v2: [v2.0.0-alpha.1](https://github.com/google/licenseclassifier/v2/tree/v2.0.0-alpha.1)
 - github.com/gorilla/handlers: [60c7bfd](https://github.com/gorilla/handlers/tree/60c7bfd)
+- github.com/hashicorp/go-hclog: [v0.9.2](https://github.com/hashicorp/go-hclog/tree/v0.9.2)
+- github.com/hashicorp/go-retryablehttp: [v0.6.4](https://github.com/hashicorp/go-retryablehttp/tree/v0.6.4)
 - github.com/hashicorp/go-version: [v1.2.0](https://github.com/hashicorp/go-version/tree/v1.2.0)
 - github.com/hudl/fargo: [v1.3.0](https://github.com/hudl/fargo/tree/v1.3.0)
 - github.com/hugelgupf/socketpair: [05d35a9](https://github.com/hugelgupf/socketpair/tree/05d35a9)
@@ -252,6 +254,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/streadway/amqp: [edfb901](https://github.com/streadway/amqp/tree/edfb901)
 - github.com/streadway/handy: [d5acb31](https://github.com/streadway/handy/tree/d5acb31)
 - github.com/vbauerster/mpb/v6: [v6.0.3](https://github.com/vbauerster/mpb/v6/tree/v6.0.3)
+- github.com/xanzy/go-gitlab: [v0.43.0](https://github.com/xanzy/go-gitlab/tree/v0.43.0)
 - github.com/xi2/xz: [48954b6](https://github.com/xi2/xz/tree/48954b6)
 - github.com/xlab/treeprint: [a009c39](https://github.com/xlab/treeprint/tree/a009c39)
 - github.com/yvasiyarov/go-metrics: [57bccd1](https://github.com/yvasiyarov/go-metrics/tree/57bccd1)
@@ -265,6 +268,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - sigs.k8s.io/kustomize/kustomize/v4: v4.0.5
 - sigs.k8s.io/kustomize/kyaml: v0.10.15
 - sigs.k8s.io/release-utils: v0.2.1
+- sigs.k8s.io/zeitgeist: v0.3.0
 - sourcegraph.com/sourcegraph/appdash: ebfcffb
 
 ### Changed
@@ -278,6 +282,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/NYTimes/gziphandler: [56545f4 → v1.1.1](https://github.com/NYTimes/gziphandler/compare/56545f4...v1.1.1)
 - github.com/StackExchange/wmi: [5d04971 → cbe6696](https://github.com/StackExchange/wmi/compare/5d04971...cbe6696)
 - github.com/alecthomas/units: [c3de453 → f65c72e](https://github.com/alecthomas/units/compare/c3de453...f65c72e)
+- github.com/aws/aws-sdk-go: [v1.35.24 → v1.37.6](https://github.com/aws/aws-sdk-go/compare/v1.35.24...v1.37.6)
 - github.com/cenkalti/backoff: [v2.1.1+incompatible → v2.2.1+incompatible](https://github.com/cenkalti/backoff/compare/v2.1.1...v2.2.1)
 - github.com/cilium/ebpf: [4032b1d → v0.5.0](https://github.com/cilium/ebpf/compare/4032b1d...v0.5.0)
 - github.com/container-storage-interface/spec: [v1.2.0 → v1.3.0](https://github.com/container-storage-interface/spec/compare/v1.2.0...v1.3.0)
@@ -387,7 +392,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - golang.org/x/exp: 6cc2880 → 85be41e
 - golang.org/x/lint: 738671d → 83fdc39
 - golang.org/x/mobile: d2bd2a2 → e6ae53a
-- golang.org/x/mod: v0.3.0 → v0.4.0
+- golang.org/x/mod: v0.3.0 → v0.4.1
 - golang.org/x/net: 69a7880 → 89ef3d9
 - golang.org/x/oauth2: 9fd6049 → 01de73c
 - golang.org/x/sync: 67f06af → 036812b
@@ -403,7 +408,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - gopkg.in/gcfg.v1: v1.2.0 → v1.2.3
 - gopkg.in/square/go-jose.v2: v2.3.1 → v2.5.1
 - gopkg.in/yaml.v2: v2.3.0 → v2.4.0
-- gopkg.in/yaml.v3: 9f266ea → eeeca48
+- gopkg.in/yaml.v3: 9f266ea → 496545a
 - gotest.tools/v3: v3.0.2 → v3.0.3
 - honnef.co/go/tools: v0.0.1-2020.1.5 → v0.0.1-2020.1.4
 - k8s.io/gengo: 83324d8 → b6c5ce2
