Update release notes

--- a/v1.21.0.md
+++ b/v1.21.0.md
@@ -18,14 +18,14 @@
 # CRI-O v1.21.0
 
 The release notes have been generated for the commit range
-[v1.20.0...1559a9a](https://github.com/cri-o/cri-o/compare/v1.20.0...1559a9af5e08f7c0a184ca5a3e0656848cfb6482) on Mon, 07 Jun 2021 07:03:41 UTC.
+[v1.20.0...0227dfd](https://github.com/cri-o/cri-o/compare/v1.20.0...0227dfd6491da3f9b72fb61581314c3a81f22b28) on Mon, 07 Jun 2021 09:54:36 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.1559a9af5e08f7c0a184ca5a3e0656848cfb6482.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.1559a9af5e08f7c0a184ca5a3e0656848cfb6482.tar.gz)
-- [cri-o.arm64.1559a9af5e08f7c0a184ca5a3e0656848cfb6482.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.1559a9af5e08f7c0a184ca5a3e0656848cfb6482.tar.gz)
+- [cri-o.amd64.0227dfd6491da3f9b72fb61581314c3a81f22b28.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.0227dfd6491da3f9b72fb61581314c3a81f22b28.tar.gz)
+- [cri-o.arm64.0227dfd6491da3f9b72fb61581314c3a81f22b28.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.0227dfd6491da3f9b72fb61581314c3a81f22b28.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -151,6 +151,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/aws/aws-lambda-go: [v1.13.3](https://github.com/aws/aws-lambda-go/tree/v1.13.3)
 - github.com/aws/aws-sdk-go-v2: [v0.18.0](https://github.com/aws/aws-sdk-go-v2/tree/v0.18.0)
 - github.com/bitly/go-simplejson: [v0.5.0](https://github.com/bitly/go-simplejson/tree/v0.5.0)
+- github.com/bits-and-blooms/bitset: [v1.2.0](https://github.com/bits-and-blooms/bitset/tree/v1.2.0)
 - github.com/bmizerany/assert: [b7ed37b](https://github.com/bmizerany/assert/tree/b7ed37b)
 - github.com/bshuster-repo/logrus-logstash-hook: [v0.4.1](https://github.com/bshuster-repo/logrus-logstash-hook/tree/v0.4.1)
 - github.com/bugsnag/bugsnag-go: [b1d1530](https://github.com/bugsnag/bugsnag-go/tree/b1d1530)
@@ -358,7 +359,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/opencontainers/runc: [v1.0.0-rc90 → v1.0.0-rc95](https://github.com/opencontainers/runc/compare/v1.0.0-rc90...v1.0.0-rc95)
 - github.com/opencontainers/runtime-spec: [3e4195d → 7413a7f](https://github.com/opencontainers/runtime-spec/compare/3e4195d...7413a7f)
 - github.com/opencontainers/runtime-tools: [07406c5 → d1bf3e6](https://github.com/opencontainers/runtime-tools/compare/07406c5...d1bf3e6)
-- github.com/opencontainers/selinux: [v1.6.0 → v1.8.1](https://github.com/opencontainers/selinux/compare/v1.6.0...v1.8.1)
+- github.com/opencontainers/selinux: [v1.6.0 → v1.8.2](https://github.com/opencontainers/selinux/compare/v1.6.0...v1.8.2)
 - github.com/openshift/imagebuilder: [v1.1.6 → v1.2.0](https://github.com/openshift/imagebuilder/compare/v1.1.6...v1.2.0)
 - github.com/pelletier/go-toml: [v1.2.0 → v1.8.1](https://github.com/pelletier/go-toml/compare/v1.2.0...v1.8.1)
 - github.com/pkg/diff: [5b29258 → 20ebb0f](https://github.com/pkg/diff/compare/5b29258...20ebb0f)
