Update release notes

--- a/v1.21.0.md
+++ b/v1.21.0.md
@@ -18,14 +18,14 @@
 # CRI-O v1.21.0
 
 The release notes have been generated for the commit range
-[v1.20.0...2c2a123](https://github.com/cri-o/cri-o/compare/v1.20.0...2c2a12313e0b237a7c1344ad4a20a0fbfe6cced1) on Mon, 07 Jun 2021 15:45:18 UTC.
+[v1.20.0...eedb15e](https://github.com/cri-o/cri-o/compare/v1.20.0...eedb15e9ac32ff60e56690b8ff8d42ea717d9d43) on Tue, 08 Jun 2021 02:43:19 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.2c2a12313e0b237a7c1344ad4a20a0fbfe6cced1.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.2c2a12313e0b237a7c1344ad4a20a0fbfe6cced1.tar.gz)
-- [cri-o.arm64.2c2a12313e0b237a7c1344ad4a20a0fbfe6cced1.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.2c2a12313e0b237a7c1344ad4a20a0fbfe6cced1.tar.gz)
+- [cri-o.amd64.eedb15e9ac32ff60e56690b8ff8d42ea717d9d43.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.eedb15e9ac32ff60e56690b8ff8d42ea717d9d43.tar.gz)
+- [cri-o.arm64.eedb15e9ac32ff60e56690b8ff8d42ea717d9d43.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.eedb15e9ac32ff60e56690b8ff8d42ea717d9d43.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -82,6 +82,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 #### Bug or Regression
  - Add support for `absent_mount_sources_to_reject`, which allows admins to configure paths that, when mounted into a container despite not existing on the host, causes a container creation request to fail. This is useful for paths like `/etc/hostname`, which causes trouble as a directory, but possibly shouldn't be created as a file either (in the case of a dynamic hostname). ([#4844](https://github.com/cri-o/cri-o/pull/4844), [@haircommander](https://github.com/haircommander))
  - Add the config field `internal_wipe` which moves the responsibility of wiping containers after a reboot and images after an upgrade from the external binary `crio wipe` to the main crio server. This has a handful of advantages, the main one being crio is now better able to cleanup CNI resources after a reboot. ([#4767](https://github.com/cri-o/cri-o/pull/4767), [@haircommander](https://github.com/haircommander))
+ - Allow users to customize conmon's resources if a pod is in a workload. ([#4907](https://github.com/cri-o/cri-o/pull/4907), [@haircommander](https://github.com/haircommander))
  - Fix a bug in `internal_wipe` that would mean CNI resources would be leaked across reboots. ([#4900](https://github.com/cri-o/cri-o/pull/4900), [@haircommander](https://github.com/haircommander))
  - Fix a bug where CRI-O can't work with runc 1.0.0-rc93 because of an incorrectly specified list of capabilities ([#4828](https://github.com/cri-o/cri-o/pull/4828), [@haircommander](https://github.com/haircommander))
  - Fix a bug where CRI-O would leak opened files for namespaces on a server restore ([#4758](https://github.com/cri-o/cri-o/pull/4758), [@haircommander](https://github.com/haircommander))
@@ -356,7 +357,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/olekukonko/tablewriter: [v0.0.4 → v0.0.5](https://github.com/olekukonko/tablewriter/compare/v0.0.4...v0.0.5)
 - github.com/onsi/ginkgo: [v1.14.1 → v1.16.4](https://github.com/onsi/ginkgo/compare/v1.14.1...v1.16.4)
 - github.com/onsi/gomega: [v1.10.3 → v1.13.0](https://github.com/onsi/gomega/compare/v1.10.3...v1.13.0)
-- github.com/opencontainers/runc: [v1.0.0-rc90 → v1.0.0-rc95](https://github.com/opencontainers/runc/compare/v1.0.0-rc90...v1.0.0-rc95)
+- github.com/opencontainers/runc: [v1.0.0-rc90 → a95237f](https://github.com/opencontainers/runc/compare/v1.0.0-rc90...a95237f)
 - github.com/opencontainers/runtime-spec: [3e4195d → 7413a7f](https://github.com/opencontainers/runtime-spec/compare/3e4195d...7413a7f)
 - github.com/opencontainers/runtime-tools: [07406c5 → d1bf3e6](https://github.com/opencontainers/runtime-tools/compare/07406c5...d1bf3e6)
 - github.com/opencontainers/selinux: [v1.6.0 → v1.8.2](https://github.com/opencontainers/selinux/compare/v1.6.0...v1.8.2)
