--- a/v1.21.0.md
+++ b/v1.21.0.md
@@ -18,14 +18,14 @@
 # CRI-O v1.21.0
 
 The release notes have been generated for the commit range
-[v1.20.0...c61c168](https://github.com/cri-o/cri-o/compare/v1.20.0...c61c1688e1093ffcb15bce6027eefcb93dc6f295) on Tue, 08 Jun 2021 07:02:23 UTC.
+[v1.20.0...67f182a](https://github.com/cri-o/cri-o/compare/v1.20.0...67f182ac112a3df56e18d73965a55be459a7f271) on Tue, 08 Jun 2021 10:07:56 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.c61c1688e1093ffcb15bce6027eefcb93dc6f295.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.c61c1688e1093ffcb15bce6027eefcb93dc6f295.tar.gz)
-- [cri-o.arm64.c61c1688e1093ffcb15bce6027eefcb93dc6f295.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.c61c1688e1093ffcb15bce6027eefcb93dc6f295.tar.gz)
+- [cri-o.amd64.67f182ac112a3df56e18d73965a55be459a7f271.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.67f182ac112a3df56e18d73965a55be459a7f271.tar.gz)
+- [cri-o.arm64.67f182ac112a3df56e18d73965a55be459a7f271.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.67f182ac112a3df56e18d73965a55be459a7f271.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -139,18 +139,9 @@ Download one of our static release bundles via our Google Cloud Bucket:
 ## Dependencies
 
 ### Added
-- github.com/Knetic/govaluate: [9aa4983](https://github.com/Knetic/govaluate/tree/9aa4983)
 - github.com/Microsoft/hcsshim/test: [43a75bb](https://github.com/Microsoft/hcsshim/test/tree/43a75bb)
 - github.com/Shopify/logrus-bugsnag: [577dee2](https://github.com/Shopify/logrus-bugsnag/tree/577dee2)
-- github.com/Shopify/sarama: [v1.19.0](https://github.com/Shopify/sarama/tree/v1.19.0)
-- github.com/Shopify/toxiproxy: [v2.1.4+incompatible](https://github.com/Shopify/toxiproxy/tree/v2.1.4)
-- github.com/VividCortex/gohistogram: [v1.0.0](https://github.com/VividCortex/gohistogram/tree/v1.0.0)
-- github.com/afex/hystrix-go: [fa1af6a](https://github.com/afex/hystrix-go/tree/fa1af6a)
 - github.com/andybalholm/brotli: [v1.0.0](https://github.com/andybalholm/brotli/tree/v1.0.0)
-- github.com/apache/thrift: [v0.13.0](https://github.com/apache/thrift/tree/v0.13.0)
-- github.com/aryann/difflib: [e206f87](https://github.com/aryann/difflib/tree/e206f87)
-- github.com/aws/aws-lambda-go: [v1.13.3](https://github.com/aws/aws-lambda-go/tree/v1.13.3)
-- github.com/aws/aws-sdk-go-v2: [v0.18.0](https://github.com/aws/aws-sdk-go-v2/tree/v0.18.0)
 - github.com/bitly/go-simplejson: [v0.5.0](https://github.com/bitly/go-simplejson/tree/v0.5.0)
 - github.com/bits-and-blooms/bitset: [v1.2.0](https://github.com/bits-and-blooms/bitset/tree/v1.2.0)
 - github.com/bmizerany/assert: [b7ed37b](https://github.com/bmizerany/assert/tree/b7ed37b)
@@ -159,12 +150,10 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/bugsnag/osext: [0dd3f91](https://github.com/bugsnag/osext/tree/0dd3f91)
 - github.com/bugsnag/panicwrap: [e2c2850](https://github.com/bugsnag/panicwrap/tree/e2c2850)
 - github.com/carolynvs/magex: [v0.6.0](https://github.com/carolynvs/magex/tree/v0.6.0)
-- github.com/casbin/casbin/v2: [v2.1.2](https://github.com/casbin/casbin/v2/tree/v2.1.2)
 - github.com/checkpoint-restore/checkpointctl: [a2024f5](https://github.com/checkpoint-restore/checkpointctl/tree/a2024f5)
 - github.com/checkpoint-restore/go-criu/v4: [v4.1.0](https://github.com/checkpoint-restore/go-criu/v4/tree/v4.1.0)
 - github.com/checkpoint-restore/go-criu/v5: [v5.0.0](https://github.com/checkpoint-restore/go-criu/v5/tree/v5.0.0)
 - github.com/cheggaaa/pb/v3: [v3.0.5](https://github.com/cheggaaa/pb/v3/tree/v3.0.5)
-- github.com/clbanning/x2j: [8252494](https://github.com/clbanning/x2j/tree/8252494)
 - github.com/cncf/udpa/go: [5459f2c](https://github.com/cncf/udpa/go/tree/5459f2c)
 - github.com/containerd/aufs: [v1.0.0](https://github.com/containerd/aufs/tree/v1.0.0)
 - github.com/containerd/btrfs: [v1.0.0](https://github.com/containerd/btrfs/tree/v1.0.0)
@@ -179,17 +168,12 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/docker/go-plugins-helpers: [c9a8a2d](https://github.com/docker/go-plugins-helpers/tree/c9a8a2d)
 - github.com/dsnet/compress: [v0.0.1](https://github.com/dsnet/compress/tree/v0.0.1)
 - github.com/dsnet/golib: [1ea1667](https://github.com/dsnet/golib/tree/1ea1667)
-- github.com/eapache/go-resiliency: [v1.1.0](https://github.com/eapache/go-resiliency/tree/v1.1.0)
-- github.com/eapache/go-xerial-snappy: [776d571](https://github.com/eapache/go-xerial-snappy/tree/776d571)
-- github.com/eapache/queue: [v1.1.0](https://github.com/eapache/queue/tree/v1.1.0)
-- github.com/edsrzf/mmap-go: [v1.0.0](https://github.com/edsrzf/mmap-go/tree/v1.0.0)
 - github.com/fanliao/go-promise: [1890db3](https://github.com/fanliao/go-promise/tree/1890db3)
-- github.com/franela/goblin: [c9ffbef](https://github.com/franela/goblin/tree/c9ffbef)
-- github.com/franela/goreq: [bcd34c9](https://github.com/franela/goreq/tree/bcd34c9)
 - github.com/frankban/quicktest: [v1.11.3](https://github.com/frankban/quicktest/tree/v1.11.3)
 - github.com/garyburd/redigo: [535138d](https://github.com/garyburd/redigo/tree/535138d)
 - github.com/go-errors/errors: [v1.0.1](https://github.com/go-errors/errors/tree/v1.0.1)
 - github.com/go-ini/ini: [v1.25.4](https://github.com/go-ini/ini/tree/v1.25.4)
+- github.com/go-kit/log: [v0.1.0](https://github.com/go-kit/log/tree/v0.1.0)
 - github.com/go-task/slim-sprig: [348f09d](https://github.com/go-task/slim-sprig/tree/348f09d)
 - github.com/gobuffalo/here: [v0.6.0](https://github.com/gobuffalo/here/tree/v0.6.0)
 - github.com/gogo/googleapis: [v1.4.0](https://github.com/gogo/googleapis/tree/v1.4.0)
@@ -200,17 +184,11 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/gorilla/handlers: [60c7bfd](https://github.com/gorilla/handlers/tree/60c7bfd)
 - github.com/hashicorp/go-hclog: [v0.9.2](https://github.com/hashicorp/go-hclog/tree/v0.9.2)
 - github.com/hashicorp/go-retryablehttp: [v0.6.4](https://github.com/hashicorp/go-retryablehttp/tree/v0.6.4)
-- github.com/hashicorp/go-version: [v1.2.0](https://github.com/hashicorp/go-version/tree/v1.2.0)
-- github.com/hudl/fargo: [v1.3.0](https://github.com/hudl/fargo/tree/v1.3.0)
 - github.com/hugelgupf/socketpair: [05d35a9](https://github.com/hugelgupf/socketpair/tree/05d35a9)
-- github.com/influxdata/influxdb1-client: [8bf82d3](https://github.com/influxdata/influxdb1-client/tree/8bf82d3)
 - github.com/jpillora/backoff: [v1.0.0](https://github.com/jpillora/backoff/tree/v1.0.0)
 - github.com/jsimonetti/rtnetlink: [d2c2404](https://github.com/jsimonetti/rtnetlink/tree/d2c2404)
 - github.com/juju/ansiterm: [720a095](https://github.com/juju/ansiterm/tree/720a095)
-- github.com/lightstep/lightstep-tracer-common/golang/gogo: [bc2310a](https://github.com/lightstep/lightstep-tracer-common/golang/gogo/tree/bc2310a)
-- github.com/lightstep/lightstep-tracer-go: [v0.18.1](https://github.com/lightstep/lightstep-tracer-go/tree/v0.18.1)
 - github.com/lunixbochs/vtclean: [2d01aac](https://github.com/lunixbochs/vtclean/tree/2d01aac)
-- github.com/lyft/protoc-gen-validate: [v0.0.13](https://github.com/lyft/protoc-gen-validate/tree/v0.0.13)
 - github.com/magefile/mage: [v1.11.0](https://github.com/magefile/mage/tree/v1.11.0)
 - github.com/manifoldco/promptui: [v0.8.0](https://github.com/manifoldco/promptui/tree/v0.8.0)
 - github.com/markbates/pkger: [v0.17.1](https://github.com/markbates/pkger/tree/v0.17.1)
@@ -226,35 +204,14 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/moby/sys/mount: [v0.2.0](https://github.com/moby/sys/mount/tree/v0.2.0)
 - github.com/moby/sys/symlink: [v0.1.0](https://github.com/moby/sys/symlink/tree/v0.1.0)
 - github.com/monochromegane/go-gitignore: [205db1a](https://github.com/monochromegane/go-gitignore/tree/205db1a)
-- github.com/nats-io/jwt: [v0.3.2](https://github.com/nats-io/jwt/tree/v0.3.2)
-- github.com/nats-io/nats-server/v2: [v2.1.2](https://github.com/nats-io/nats-server/v2/tree/v2.1.2)
-- github.com/nats-io/nats.go: [v1.9.1](https://github.com/nats-io/nats.go/tree/v1.9.1)
-- github.com/nats-io/nkeys: [v0.1.3](https://github.com/nats-io/nkeys/tree/v0.1.3)
-- github.com/nats-io/nuid: [v1.0.1](https://github.com/nats-io/nuid/tree/v1.0.1)
 - github.com/ncw/swift: [v1.0.47](https://github.com/ncw/swift/tree/v1.0.47)
 - github.com/nwaples/rardecode: [v1.1.0](https://github.com/nwaples/rardecode/tree/v1.1.0)
-- github.com/oklog/oklog: [v0.3.2](https://github.com/oklog/oklog/tree/v0.3.2)
-- github.com/oklog/run: [v1.0.0](https://github.com/oklog/run/tree/v1.0.0)
-- github.com/op/go-logging: [970db52](https://github.com/op/go-logging/tree/970db52)
-- github.com/opentracing-contrib/go-observer: [a52f234](https://github.com/opentracing-contrib/go-observer/tree/a52f234)
-- github.com/opentracing/basictracer-go: [v1.0.0](https://github.com/opentracing/basictracer-go/tree/v1.0.0)
-- github.com/openzipkin-contrib/zipkin-go-opentracing: [v0.4.5](https://github.com/openzipkin-contrib/zipkin-go-opentracing/tree/v0.4.5)
-- github.com/openzipkin/zipkin-go: [v0.2.2](https://github.com/openzipkin/zipkin-go/tree/v0.2.2)
-- github.com/pact-foundation/pact-go: [v1.0.4](https://github.com/pact-foundation/pact-go/tree/v1.0.4)
-- github.com/performancecopilot/speed: [v3.0.0+incompatible](https://github.com/performancecopilot/speed/tree/v3.0.0)
 - github.com/pierrec/lz4/v4: [v4.0.3](https://github.com/pierrec/lz4/v4/tree/v4.0.3)
-- github.com/pierrec/lz4: [v2.0.5+incompatible](https://github.com/pierrec/lz4/tree/v2.0.5)
-- github.com/pkg/profile: [v1.2.1](https://github.com/pkg/profile/tree/v1.2.1)
-- github.com/rcrowley/go-metrics: [3113b84](https://github.com/rcrowley/go-metrics/tree/3113b84)
 - github.com/rivo/uniseg: [v0.2.0](https://github.com/rivo/uniseg/tree/v0.2.0)
-- github.com/samuel/go-zookeeper: [2cc03de](https://github.com/samuel/go-zookeeper/tree/2cc03de)
 - github.com/shirou/gopsutil/v3: [v3.20.12](https://github.com/shirou/gopsutil/v3/tree/v3.20.12)
-- github.com/sony/gobreaker: [v0.4.1](https://github.com/sony/gobreaker/tree/v0.4.1)
 - github.com/spiegel-im-spiegel/errs: [v1.0.2](https://github.com/spiegel-im-spiegel/errs/tree/v1.0.2)
 - github.com/spiegel-im-spiegel/go-cvss: [v0.4.0](https://github.com/spiegel-im-spiegel/go-cvss/tree/v0.4.0)
 - github.com/stefanberger/go-pkcs11uri: [78d3cae](https://github.com/stefanberger/go-pkcs11uri/tree/78d3cae)
-- github.com/streadway/amqp: [edfb901](https://github.com/streadway/amqp/tree/edfb901)
-- github.com/streadway/handy: [d5acb31](https://github.com/streadway/handy/tree/d5acb31)
 - github.com/vbauerster/mpb/v6: [v6.0.3](https://github.com/vbauerster/mpb/v6/tree/v6.0.3)
 - github.com/xanzy/go-gitlab: [v0.43.0](https://github.com/xanzy/go-gitlab/tree/v0.43.0)
 - github.com/xi2/xz: [48954b6](https://github.com/xi2/xz/tree/48954b6)
@@ -263,7 +220,6 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/yvasiyarov/gorelic: [a9bba5b](https://github.com/yvasiyarov/gorelic/tree/a9bba5b)
 - github.com/yvasiyarov/newrelic_platform_go: [b21fdbd](https://github.com/yvasiyarov/newrelic_platform_go/tree/b21fdbd)
 - go.starlark.net: 8dd3e2e
-- go.uber.org/tools: 2cfd321
 - google.golang.org/cloud: 975617b
 - sigs.k8s.io/kustomize/api: v0.8.5
 - sigs.k8s.io/kustomize/cmd/config: v0.9.7
@@ -271,7 +227,6 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - sigs.k8s.io/kustomize/kyaml: v0.10.15
 - sigs.k8s.io/release-utils: v0.2.1
 - sigs.k8s.io/zeitgeist: v0.3.0
-- sourcegraph.com/sourcegraph/appdash: ebfcffb
 
 ### Changed
 - cloud.google.com/go/logging: v1.1.0 → v1.1.2
@@ -285,7 +240,6 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/StackExchange/wmi: [5d04971 → cbe6696](https://github.com/StackExchange/wmi/compare/5d04971...cbe6696)
 - github.com/alecthomas/units: [c3de453 → f65c72e](https://github.com/alecthomas/units/compare/c3de453...f65c72e)
 - github.com/aws/aws-sdk-go: [v1.35.24 → v1.37.6](https://github.com/aws/aws-sdk-go/compare/v1.35.24...v1.37.6)
-- github.com/cenkalti/backoff: [v2.1.1+incompatible → v2.2.1+incompatible](https://github.com/cenkalti/backoff/compare/v2.1.1...v2.2.1)
 - github.com/cilium/ebpf: [4032b1d → v0.5.0](https://github.com/cilium/ebpf/compare/4032b1d...v0.5.0)
 - github.com/container-storage-interface/spec: [v1.2.0 → v1.3.0](https://github.com/container-storage-interface/spec/compare/v1.2.0...v1.3.0)
 - github.com/containerd/cgroups: [0dbf7f0 → v1.0.1](https://github.com/containerd/cgroups/compare/0dbf7f0...v1.0.1)
@@ -312,7 +266,6 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/emicklei/go-restful: [v2.9.5+incompatible → v2.15.0+incompatible](https://github.com/emicklei/go-restful/compare/v2.9.5...v2.15.0)
 - github.com/envoyproxy/go-control-plane: [5f8ba28 → 668b12f](https://github.com/envoyproxy/go-control-plane/compare/5f8ba28...668b12f)
 - github.com/fsouza/go-dockerclient: [v1.6.5 → v1.7.2](https://github.com/fsouza/go-dockerclient/compare/v1.6.5...v1.7.2)
-- github.com/go-kit/kit: [v0.9.0 → v0.10.0](https://github.com/go-kit/kit/compare/v0.9.0...v0.10.0)
 - github.com/go-logfmt/logfmt: [v0.4.0 → v0.5.0](https://github.com/go-logfmt/logfmt/compare/v0.4.0...v0.5.0)
 - github.com/go-logr/logr: [v0.2.0 → v0.4.0](https://github.com/go-logr/logr/compare/v0.2.0...v0.4.0)
 - github.com/go-ole/go-ole: [v1.2.1 → v1.2.4](https://github.com/go-ole/go-ole/compare/v1.2.1...v1.2.4)
@@ -333,8 +286,6 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/google/uuid: [v1.1.2 → v1.2.0](https://github.com/google/uuid/compare/v1.1.2...v1.2.0)
 - github.com/gorilla/schema: [v1.1.0 → v1.2.0](https://github.com/gorilla/schema/compare/v1.1.0...v1.2.0)
 - github.com/grpc-ecosystem/go-grpc-middleware: [v1.2.0 → v1.3.0](https://github.com/grpc-ecosystem/go-grpc-middleware/compare/v1.2.0...v1.3.0)
-- github.com/hashicorp/consul/api: [v1.1.0 → v1.3.0](https://github.com/hashicorp/consul/api/compare/v1.1.0...v1.3.0)
-- github.com/hashicorp/consul/sdk: [v0.1.1 → v0.3.0](https://github.com/hashicorp/consul/sdk/compare/v0.1.1...v0.3.0)
 - github.com/hashicorp/go-multierror: [v1.1.0 → v1.1.1](https://github.com/hashicorp/go-multierror/compare/v1.1.0...v1.1.1)
 - github.com/heketi/heketi: [c2e2a4a → v10.2.0+incompatible](https://github.com/heketi/heketi/compare/c2e2a4a...v10.2.0)
 - github.com/insomniacslk/dhcp: [ed3125c → cc9239a](https://github.com/insomniacslk/dhcp/compare/ed3125c...cc9239a)
@@ -364,8 +315,8 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/openshift/imagebuilder: [v1.1.6 → v1.2.0](https://github.com/openshift/imagebuilder/compare/v1.1.6...v1.2.0)
 - github.com/pelletier/go-toml: [v1.2.0 → v1.8.1](https://github.com/pelletier/go-toml/compare/v1.2.0...v1.8.1)
 - github.com/pkg/diff: [5b29258 → 20ebb0f](https://github.com/pkg/diff/compare/5b29258...20ebb0f)
-- github.com/prometheus/client_golang: [v1.7.1 → v1.10.0](https://github.com/prometheus/client_golang/compare/v1.7.1...v1.10.0)
-- github.com/prometheus/common: [v0.10.0 → v0.18.0](https://github.com/prometheus/common/compare/v0.10.0...v0.18.0)
+- github.com/prometheus/client_golang: [v1.7.1 → v1.11.0](https://github.com/prometheus/client_golang/compare/v1.7.1...v1.11.0)
+- github.com/prometheus/common: [v0.10.0 → v0.26.0](https://github.com/prometheus/common/compare/v0.10.0...v0.26.0)
 - github.com/prometheus/procfs: [v0.2.0 → v0.6.0](https://github.com/prometheus/procfs/compare/v0.2.0...v0.6.0)
 - github.com/psampaz/go-mod-outdated: [v0.7.0 → v0.8.0](https://github.com/psampaz/go-mod-outdated/compare/v0.7.0...v0.8.0)
 - github.com/rogpeppe/go-internal: [v1.6.2 → v1.7.0](https://github.com/rogpeppe/go-internal/compare/v1.6.2...v1.7.0)
@@ -387,9 +338,6 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/vishvananda/netlink: [v1.1.0 → d40f988](https://github.com/vishvananda/netlink/compare/v1.1.0...d40f988)
 - github.com/willf/bitset: [d5bec33 → v1.1.11](https://github.com/willf/bitset/compare/d5bec33...v1.1.11)
 - github.com/yuin/goldmark: [v1.2.1 → v1.3.1](https://github.com/yuin/goldmark/compare/v1.2.1...v1.3.1)
-- go.uber.org/atomic: v1.4.0 → v1.5.0
-- go.uber.org/multierr: v1.1.0 → v1.3.0
-- go.uber.org/zap: v1.10.0 → v1.13.0
 - golang.org/x/crypto: 7f63de1 → 0c34fe9
 - golang.org/x/exp: 6cc2880 → 85be41e
 - golang.org/x/lint: 738671d → 83fdc39
@@ -398,7 +346,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - golang.org/x/net: 69a7880 → 89ef3d9
 - golang.org/x/oauth2: 9fd6049 → 01de73c
 - golang.org/x/sync: 67f06af → 036812b
-- golang.org/x/sys: 5cba982 → 8803ae5
+- golang.org/x/sys: 5cba982 → ebe580a
 - golang.org/x/term: ad39bd3 → a79de54
 - golang.org/x/text: v0.3.4 → v0.3.6
 - golang.org/x/time: 3af7569 → f8bda1e
@@ -407,7 +355,6 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - google.golang.org/appengine: v1.6.6 → v1.6.7
 - google.golang.org/grpc: v1.27.0 → v1.38.0
 - google.golang.org/protobuf: v1.25.0 → v1.26.0
-- gopkg.in/gcfg.v1: v1.2.0 → v1.2.3
 - gopkg.in/square/go-jose.v2: v2.3.1 → v2.5.1
 - gopkg.in/yaml.v2: v2.3.0 → v2.4.0
 - gopkg.in/yaml.v3: 9f266ea → 496545a
@@ -452,12 +399,14 @@ Download one of our static release bundles via our Google Cloud Bucket:
 ### Removed
 - github.com/bazelbuild/rules_go: [v0.22.1](https://github.com/bazelbuild/rules_go/tree/v0.22.1)
 - github.com/bombsimon/wsl/v2: [v2.0.0](https://github.com/bombsimon/wsl/v2/tree/v2.0.0)
+- github.com/codahale/hdrhistogram: [3a0bb77](https://github.com/codahale/hdrhistogram/tree/3a0bb77)
 - github.com/codegangsta/negroni: [v1.0.0](https://github.com/codegangsta/negroni/tree/v1.0.0)
 - github.com/containers/libpod/v2: [v2.0.6](https://github.com/containers/libpod/v2/tree/v2.0.6)
 - github.com/docker/spdystream: [449fdfc](https://github.com/docker/spdystream/tree/449fdfc)
 - github.com/golangplus/bytes: [45c989f](https://github.com/golangplus/bytes/tree/45c989f)
 - github.com/golangplus/fmt: [2a5d6d7](https://github.com/golangplus/fmt/tree/2a5d6d7)
 - github.com/google/go-github/v29: [v29.0.3](https://github.com/google/go-github/v29/tree/v29.0.3)
+- github.com/gorilla/context: [v1.1.1](https://github.com/gorilla/context/tree/v1.1.1)
 - github.com/juju/errors: [22422da](https://github.com/juju/errors/tree/22422da)
 - github.com/juju/loggo: [6e530bc](https://github.com/juju/loggo/tree/6e530bc)
 - github.com/juju/testing: [e811894](https://github.com/juju/testing/tree/e811894)
