Update release notes

--- a/v1.21.0.md
+++ b/v1.21.0.md
@@ -18,14 +18,14 @@
 # CRI-O v1.21.0
 
 The release notes have been generated for the commit range
-[v1.20.0...67f182a](https://github.com/cri-o/cri-o/compare/v1.20.0...67f182ac112a3df56e18d73965a55be459a7f271) on Tue, 08 Jun 2021 10:07:56 UTC.
+[v1.20.0...0e33429](https://github.com/cri-o/cri-o/compare/v1.20.0...0e33429ed30575d1052ea04463f96875eed5cbe9) on Tue, 08 Jun 2021 19:20:16 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.67f182ac112a3df56e18d73965a55be459a7f271.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.67f182ac112a3df56e18d73965a55be459a7f271.tar.gz)
-- [cri-o.arm64.67f182ac112a3df56e18d73965a55be459a7f271.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.67f182ac112a3df56e18d73965a55be459a7f271.tar.gz)
+- [cri-o.amd64.0e33429ed30575d1052ea04463f96875eed5cbe9.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.0e33429ed30575d1052ea04463f96875eed5cbe9.tar.gz)
+- [cri-o.arm64.0e33429ed30575d1052ea04463f96875eed5cbe9.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.0e33429ed30575d1052ea04463f96875eed5cbe9.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -104,6 +104,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Instead of failing to start, CRI-O now only prints a warning and ignores the runtime, in case a **non*- default runtime is misconfigured. ([#4631](https://github.com/cri-o/cri-o/pull/4631), [@fidencio](https://github.com/fidencio))
  - Re-attempt setting up conmon's cgroup if it fails on EAGAIN from dbus ([#4921](https://github.com/cri-o/cri-o/pull/4921), [@haircommander](https://github.com/haircommander))
  - Reduce the permission on the listen socket to 0660 ([#4886](https://github.com/cri-o/cri-o/pull/4886), [@haircommander](https://github.com/haircommander))
+ - Reuse connection when connecting to dbus, as well as reattempt the connection if it fails temporarily ([#4974](https://github.com/cri-o/cri-o/pull/4974), [@haircommander](https://github.com/haircommander))
  - Some fields in the crio configuration related to storage and images were commented out by default (when running `crio config`). They have been uncommented, and will be applied (if they're different from the default value). ([#4748](https://github.com/cri-o/cri-o/pull/4748), [@haircommander](https://github.com/haircommander))
  - When dropping the infra container, the container inspect endpoint now returns a PID when requesting the infra container. ([#4613](https://github.com/cri-o/cri-o/pull/4613), [@haircommander](https://github.com/haircommander))
 
