--- a/v1.21.1.md
+++ b/v1.21.1.md
@@ -4,6 +4,7 @@
     - [Changes by Kind](#changes-by-kind)
       - [Dependency-Change](#dependency-change)
       - [Failing Test](#failing-test)
+      - [Bug or Regression](#bug-or-regression)
       - [Uncategorized](#uncategorized)
   - [Dependencies](#dependencies)
     - [Added](#added)
@@ -13,14 +14,14 @@
 # CRI-O v1.21.1
 
 The release notes have been generated for the commit range
-[v1.21.0...4f19d38](https://github.com/cri-o/cri-o/compare/v1.21.0...4f19d38a4abf5745f93a870179d1e6fcf083d4eb) on Tue, 08 Jun 2021 19:47:37 UTC.
+[v1.21.0...0be9ef8](https://github.com/cri-o/cri-o/compare/v1.21.0...0be9ef825b2f46c371710e97dd16c1d1bbcdbb77) on Tue, 08 Jun 2021 23:41:10 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.4f19d38a4abf5745f93a870179d1e6fcf083d4eb.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.4f19d38a4abf5745f93a870179d1e6fcf083d4eb.tar.gz)
-- [cri-o.arm64.4f19d38a4abf5745f93a870179d1e6fcf083d4eb.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.4f19d38a4abf5745f93a870179d1e6fcf083d4eb.tar.gz)
+- [cri-o.amd64.0be9ef825b2f46c371710e97dd16c1d1bbcdbb77.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.0be9ef825b2f46c371710e97dd16c1d1bbcdbb77.tar.gz)
+- [cri-o.arm64.0be9ef825b2f46c371710e97dd16c1d1bbcdbb77.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.0be9ef825b2f46c371710e97dd16c1d1bbcdbb77.tar.gz)
 
 ## Changelog since v1.21.0
 
@@ -31,6 +32,9 @@ Download one of our static release bundles via our Google Cloud Bucket:
 
 #### Failing Test
  - Updated static binary bundle crun version to v0.20 ([#4961](https://github.com/cri-o/cri-o/pull/4961), [@saschagrunert](https://github.com/saschagrunert))
+
+#### Bug or Regression
+ - Allow users to customize conmon's resources if a pod is in a workload. ([#4980](https://github.com/cri-o/cri-o/pull/4980), [@haircommander](https://github.com/haircommander))
 
 #### Uncategorized
  - Add support for `absent_mount_sources_to_reject`, which allows admins to configure paths that, when mounted into a container despite not existing on the host, causes a container creation request to fail. This is useful for paths like `/etc/hostname`, which causes trouble as a directory, but possibly shouldn't be created as a file either (in the case of a dynamic hostname). ([#4857](https://github.com/cri-o/cri-o/pull/4857), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
@@ -80,7 +84,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/golang/snappy: [2e65f85 → v0.0.3](https://github.com/golang/snappy/compare/2e65f85...v0.0.3)
 - github.com/json-iterator/go: [v1.1.10 → v1.1.11](https://github.com/json-iterator/go/compare/v1.1.10...v1.1.11)
 - github.com/klauspost/compress: [v1.11.13 → v1.12.2](https://github.com/klauspost/compress/compare/v1.11.13...v1.12.2)
-- github.com/opencontainers/runc: [v1.0.0-rc93 → v1.0.0-rc94](https://github.com/opencontainers/runc/compare/v1.0.0-rc93...v1.0.0-rc94)
+- github.com/opencontainers/runc: [v1.0.0-rc93 → a95237f](https://github.com/opencontainers/runc/compare/v1.0.0-rc93...a95237f)
 - github.com/opencontainers/selinux: [v1.8.0 → v1.8.1](https://github.com/opencontainers/selinux/compare/v1.8.0...v1.8.1)
 - github.com/pelletier/go-toml: [v1.2.0 → v1.8.1](https://github.com/pelletier/go-toml/compare/v1.2.0...v1.8.1)
 - github.com/syndtr/gocapability: [42c35b4 → d983527](https://github.com/syndtr/gocapability/compare/42c35b4...d983527)
