--- a/v1.21.1.md
+++ b/v1.21.1.md
@@ -14,14 +14,14 @@
 # CRI-O v1.21.1
 
 The release notes have been generated for the commit range
-[v1.21.0...0be9ef8](https://github.com/cri-o/cri-o/compare/v1.21.0...0be9ef825b2f46c371710e97dd16c1d1bbcdbb77) on Tue, 08 Jun 2021 23:41:10 UTC.
+[v1.21.0...8f26da3](https://github.com/cri-o/cri-o/compare/v1.21.0...8f26da318d79cce6aaa5cb97d13d1eb478f98927) on Wed, 09 Jun 2021 07:52:30 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.0be9ef825b2f46c371710e97dd16c1d1bbcdbb77.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.0be9ef825b2f46c371710e97dd16c1d1bbcdbb77.tar.gz)
-- [cri-o.arm64.0be9ef825b2f46c371710e97dd16c1d1bbcdbb77.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.0be9ef825b2f46c371710e97dd16c1d1bbcdbb77.tar.gz)
+- [cri-o.amd64.8f26da318d79cce6aaa5cb97d13d1eb478f98927.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.8f26da318d79cce6aaa5cb97d13d1eb478f98927.tar.gz)
+- [cri-o.arm64.8f26da318d79cce6aaa5cb97d13d1eb478f98927.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.8f26da318d79cce6aaa5cb97d13d1eb478f98927.tar.gz)
 
 ## Changelog since v1.21.0
 
@@ -35,6 +35,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 
 #### Bug or Regression
  - Allow users to customize conmon's resources if a pod is in a workload. ([#4980](https://github.com/cri-o/cri-o/pull/4980), [@haircommander](https://github.com/haircommander))
+ - Reuse connection when connecting to dbus, as well as reattempt the connection if it fails temporarily ([#4986](https://github.com/cri-o/cri-o/pull/4986), [@haircommander](https://github.com/haircommander))
 
 #### Uncategorized
  - Add support for `absent_mount_sources_to_reject`, which allows admins to configure paths that, when mounted into a container despite not existing on the host, causes a container creation request to fail. This is useful for paths like `/etc/hostname`, which causes trouble as a directory, but possibly shouldn't be created as a file either (in the case of a dynamic hostname). ([#4857](https://github.com/cri-o/cri-o/pull/4857), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
