Update release notes

--- a/v1.21.1.md
+++ b/v1.21.1.md
@@ -14,14 +14,14 @@
 # CRI-O v1.21.1
 
 The release notes have been generated for the commit range
-[v1.21.0...8f26da3](https://github.com/cri-o/cri-o/compare/v1.21.0...8f26da318d79cce6aaa5cb97d13d1eb478f98927) on Wed, 09 Jun 2021 07:52:30 UTC.
+[v1.21.0...7e41de0](https://github.com/cri-o/cri-o/compare/v1.21.0...7e41de0cae75d45e81b4984554803e8346116215) on Thu, 10 Jun 2021 08:43:06 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.8f26da318d79cce6aaa5cb97d13d1eb478f98927.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.8f26da318d79cce6aaa5cb97d13d1eb478f98927.tar.gz)
-- [cri-o.arm64.8f26da318d79cce6aaa5cb97d13d1eb478f98927.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.8f26da318d79cce6aaa5cb97d13d1eb478f98927.tar.gz)
+- [cri-o.amd64.7e41de0cae75d45e81b4984554803e8346116215.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.7e41de0cae75d45e81b4984554803e8346116215.tar.gz)
+- [cri-o.arm64.7e41de0cae75d45e81b4984554803e8346116215.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.7e41de0cae75d45e81b4984554803e8346116215.tar.gz)
 
 ## Changelog since v1.21.0
 
@@ -41,6 +41,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Add support for `absent_mount_sources_to_reject`, which allows admins to configure paths that, when mounted into a container despite not existing on the host, causes a container creation request to fail. This is useful for paths like `/etc/hostname`, which causes trouble as a directory, but possibly shouldn't be created as a file either (in the case of a dynamic hostname). ([#4857](https://github.com/cri-o/cri-o/pull/4857), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Add systemd After=crio.service to containers and conmon ([#4816](https://github.com/cri-o/cri-o/pull/4816), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Add the config field `internal_wipe` which moves the responsibility of wiping containers after a reboot and images after an upgrade from the external binary `crio wipe` to the main crio server. This has a handful of advantages, the main one being crio is now better able to cleanup CNI resources after a reboot. ([#4884](https://github.com/cri-o/cri-o/pull/4884), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - ExecSync requests now don't use conmon, instead calling the runtime directly, which reduces overhead. ([#4962](https://github.com/cri-o/cri-o/pull/4962), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a bug in `internal_wipe` that would mean CNI resources would be leaked across reboots. ([#4928](https://github.com/cri-o/cri-o/pull/4928), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a bug where CRI-O can't work with runc 1.0.0-rc93 because of an incorrectly specified list of capabilities ([#4831](https://github.com/cri-o/cri-o/pull/4831), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a bug where CRI-O would leak opened files for namespaces on a server restore ([#4795](https://github.com/cri-o/cri-o/pull/4795), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
