Update release notes

--- a/v1.21.0.md
+++ b/v1.21.0.md
@@ -18,14 +18,14 @@
 # CRI-O v1.21.0
 
 The release notes have been generated for the commit range
-[v1.20.0...4326951](https://github.com/cri-o/cri-o/compare/v1.20.0...43269517a0a28e2f0e3598cdc226b33d1df1bb38) on Thu, 10 Jun 2021 12:28:22 UTC.
+[v1.20.0...f575888](https://github.com/cri-o/cri-o/compare/v1.20.0...f575888dbf19d6ecfec831344436dce20e89edfa) on Thu, 10 Jun 2021 17:23:15 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.43269517a0a28e2f0e3598cdc226b33d1df1bb38.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.43269517a0a28e2f0e3598cdc226b33d1df1bb38.tar.gz)
-- [cri-o.arm64.43269517a0a28e2f0e3598cdc226b33d1df1bb38.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.43269517a0a28e2f0e3598cdc226b33d1df1bb38.tar.gz)
+- [cri-o.amd64.f575888dbf19d6ecfec831344436dce20e89edfa.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.f575888dbf19d6ecfec831344436dce20e89edfa.tar.gz)
+- [cri-o.arm64.f575888dbf19d6ecfec831344436dce20e89edfa.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.f575888dbf19d6ecfec831344436dce20e89edfa.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -36,6 +36,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Update static binary bundle runc version to `v1.0.0-rc94`. ([#4882](https://github.com/cri-o/cri-o/pull/4882), [@saschagrunert](https://github.com/saschagrunert))
  - Update static binary bundle runc version to `v1.0.0-rc95`. ([#4920](https://github.com/cri-o/cri-o/pull/4920), [@saschagrunert](https://github.com/saschagrunert))
  - Updated cri-tools to v1.21.0 within static binary bundle ([#4742](https://github.com/cri-o/cri-o/pull/4742), [@saschagrunert](https://github.com/saschagrunert))
+ - Updated crun in static binary bundle to v0.20.1 ([#4959](https://github.com/cri-o/cri-o/pull/4959), [@saschagrunert](https://github.com/saschagrunert))
 
 #### API Change
  - Update how the resources for a workload is specified. Now, to override a workload, the pod must have the annotation `$prefix/$ctr_name = {"$resource_type": "$resource_value"}`. The workloads feature has also been marked as experimental, which should have happened from the beginning. ([#4787](https://github.com/cri-o/cri-o/pull/4787), [@haircommander](https://github.com/haircommander))
