Update release notes

--- a/v1.20.3.md
+++ b/v1.20.3.md
@@ -13,14 +13,14 @@
 # CRI-O v1.20.3
 
 The release notes have been generated for the commit range
-[v1.20.2...b53fa9d](https://github.com/cri-o/cri-o/compare/v1.20.2...b53fa9da140721588800280db6658969d9322459) on Thu, 03 Jun 2021 01:25:34 UTC.
+[v1.20.2...845b2fa](https://github.com/cri-o/cri-o/compare/v1.20.2...845b2faee1306725c785935b4109bb563a346f3c) on Fri, 11 Jun 2021 19:00:20 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.b53fa9da140721588800280db6658969d9322459.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.b53fa9da140721588800280db6658969d9322459.tar.gz)
-- [cri-o.arm64.b53fa9da140721588800280db6658969d9322459.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.b53fa9da140721588800280db6658969d9322459.tar.gz)
+- [cri-o.amd64.845b2faee1306725c785935b4109bb563a346f3c.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.845b2faee1306725c785935b4109bb563a346f3c.tar.gz)
+- [cri-o.arm64.845b2faee1306725c785935b4109bb563a346f3c.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.845b2faee1306725c785935b4109bb563a346f3c.tar.gz)
 
 ## Changelog since v1.20.2
 
@@ -30,6 +30,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix possible segfault when image is deleted by podman while CRI-O is listing images ([#4933](https://github.com/cri-o/cri-o/pull/4933), [@haircommander](https://github.com/haircommander))
 
 #### Bug or Regression
+ - ExecSync requests now don't use conmon, instead calling the runtime directly, which reduces overhead. ([#4954](https://github.com/cri-o/cri-o/pull/4954), [@saschagrunert](https://github.com/saschagrunert))
  - Fix a couple of FD leaks when pulling images ([#4815](https://github.com/cri-o/cri-o/pull/4815), [@haircommander](https://github.com/haircommander))
 
 #### Uncategorized
