Update release notes

--- a/v1.21.0.md
+++ b/v1.21.0.md
@@ -18,14 +18,14 @@
 # CRI-O v1.21.0
 
 The release notes have been generated for the commit range
-[v1.20.0...f575888](https://github.com/cri-o/cri-o/compare/v1.20.0...f575888dbf19d6ecfec831344436dce20e89edfa) on Thu, 10 Jun 2021 17:23:15 UTC.
+[v1.20.0...052c16e](https://github.com/cri-o/cri-o/compare/v1.20.0...052c16e12946acaed4c8298bce053d4a7eb61e78) on Mon, 14 Jun 2021 23:50:40 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.f575888dbf19d6ecfec831344436dce20e89edfa.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.f575888dbf19d6ecfec831344436dce20e89edfa.tar.gz)
-- [cri-o.arm64.f575888dbf19d6ecfec831344436dce20e89edfa.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.f575888dbf19d6ecfec831344436dce20e89edfa.tar.gz)
+- [cri-o.amd64.052c16e12946acaed4c8298bce053d4a7eb61e78.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.052c16e12946acaed4c8298bce053d4a7eb61e78.tar.gz)
+- [cri-o.arm64.052c16e12946acaed4c8298bce053d4a7eb61e78.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.052c16e12946acaed4c8298bce053d4a7eb61e78.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -119,6 +119,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 
 #### Uncategorized
  - "crio config" only prints the fields that are different than the default configuration. ([#4682](https://github.com/cri-o/cri-o/pull/4682), [@ityuhui](https://github.com/ityuhui))
+ - Add Particule as adopters ([#4994](https://github.com/cri-o/cri-o/pull/4994), [@ArchiFleKs](https://github.com/ArchiFleKs))
  - Allows users to set stream timeout from config ([#4529](https://github.com/cri-o/cri-o/pull/4529), [@wgahnagl](https://github.com/wgahnagl))
  - CRI-O now supports short-name aliases which can be configured in the `containers-registries.conf(5)` configuration files.  Please refer to the following article for further details on short-name aliases: www.redhat.com/sysadmin/container-image-short-names
   
