Update release notes

--- a/v1.21.0.md
+++ b/v1.21.0.md
@@ -18,14 +18,14 @@
 # CRI-O v1.21.0
 
 The release notes have been generated for the commit range
-[v1.20.0...052c16e](https://github.com/cri-o/cri-o/compare/v1.20.0...052c16e12946acaed4c8298bce053d4a7eb61e78) on Mon, 14 Jun 2021 23:50:40 UTC.
+[v1.20.0...4e1d564](https://github.com/cri-o/cri-o/compare/v1.20.0...4e1d564b29b4d491a4527556198160461942cf73) on Wed, 16 Jun 2021 00:57:34 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.052c16e12946acaed4c8298bce053d4a7eb61e78.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.052c16e12946acaed4c8298bce053d4a7eb61e78.tar.gz)
-- [cri-o.arm64.052c16e12946acaed4c8298bce053d4a7eb61e78.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.052c16e12946acaed4c8298bce053d4a7eb61e78.tar.gz)
+- [cri-o.amd64.4e1d564b29b4d491a4527556198160461942cf73.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.4e1d564b29b4d491a4527556198160461942cf73.tar.gz)
+- [cri-o.arm64.4e1d564b29b4d491a4527556198160461942cf73.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.4e1d564b29b4d491a4527556198160461942cf73.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -89,6 +89,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix a bug where CRI-O would leak opened files for namespaces on a server restore ([#4758](https://github.com/cri-o/cri-o/pull/4758), [@haircommander](https://github.com/haircommander))
  - Fix a bug where CollectMode wouldn't be set if the feature was backported to systemd (in RHEL/CentOS 7, for instance) ([#4563](https://github.com/cri-o/cri-o/pull/4563), [@haircommander](https://github.com/haircommander))
  - Fix a bug where `crio config` would print a string for `privileged_without_host_devices`, not a boolean ([#4827](https://github.com/cri-o/cri-o/pull/4827), [@haircommander](https://github.com/haircommander))
+ - Fix a bug where an exec sync timeout would fail to cleanup the runtime exec process ([#4999](https://github.com/cri-o/cri-o/pull/4999), [@haircommander](https://github.com/haircommander))
  - Fix a bug where containers didn't have a finished time set when using the "vm" style runtimes. ([#4468](https://github.com/cri-o/cri-o/pull/4468), [@haircommander](https://github.com/haircommander))
  - Fix a bug where crio wipe incorrectly wiped container storage even though the node wasn't rebooted ([#4691](https://github.com/cri-o/cri-o/pull/4691), [@haircommander](https://github.com/haircommander))
  - Fix a bug where pods or containers could be cleaned up out of order if the request timed out ([#4722](https://github.com/cri-o/cri-o/pull/4722), [@haircommander](https://github.com/haircommander))
