--- a/v1.21.1.md
+++ b/v1.21.1.md
@@ -14,14 +14,14 @@
 # CRI-O v1.21.1
 
 The release notes have been generated for the commit range
-[v1.21.0...7e41de0](https://github.com/cri-o/cri-o/compare/v1.21.0...7e41de0cae75d45e81b4984554803e8346116215) on Thu, 10 Jun 2021 08:43:06 UTC.
+[v1.21.0...dfcd2b6](https://github.com/cri-o/cri-o/compare/v1.21.0...dfcd2b6a61cd5436e6beb54956c6ee4453104968) on Wed, 16 Jun 2021 09:02:02 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.7e41de0cae75d45e81b4984554803e8346116215.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.7e41de0cae75d45e81b4984554803e8346116215.tar.gz)
-- [cri-o.arm64.7e41de0cae75d45e81b4984554803e8346116215.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.7e41de0cae75d45e81b4984554803e8346116215.tar.gz)
+- [cri-o.amd64.dfcd2b6a61cd5436e6beb54956c6ee4453104968.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.dfcd2b6a61cd5436e6beb54956c6ee4453104968.tar.gz)
+- [cri-o.arm64.dfcd2b6a61cd5436e6beb54956c6ee4453104968.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.dfcd2b6a61cd5436e6beb54956c6ee4453104968.tar.gz)
 
 ## Changelog since v1.21.0
 
@@ -46,6 +46,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix a bug where CRI-O can't work with runc 1.0.0-rc93 because of an incorrectly specified list of capabilities ([#4831](https://github.com/cri-o/cri-o/pull/4831), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a bug where CRI-O would leak opened files for namespaces on a server restore ([#4795](https://github.com/cri-o/cri-o/pull/4795), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a bug where `crio config` would print a string for `privileged_without_host_devices`, not a boolean ([#4829](https://github.com/cri-o/cri-o/pull/4829), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Fix a bug where an exec sync timeout would fail to cleanup the runtime exec process ([#5002](https://github.com/cri-o/cri-o/pull/5002), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a bug where server startup was significantly slowed down by attempting to clean up CNI resources after a reboot. ([#4934](https://github.com/cri-o/cri-o/pull/4934), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a segfault when CRI-O has takes more than 8 minutes to create a pod or container ([#4846](https://github.com/cri-o/cri-o/pull/4846), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix drop ALL and add back few caps behavior to not include the default configured capabilities ([#4935](https://github.com/cri-o/cri-o/pull/4935), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
